--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
 	},
 	"scripts": {
 		"build": "tsc && chmod +x dist/cli.js",
-		"start": "npm run build && dist/cli.js",
-		"pretest": "npm run build",
-		"test": "xo && ava"
+		"start": "yarn run build && dist/cli.js",
+		"pretest": "yarn run build",
+		"test": "xo && ava",
+		"lint": "eslint . --ext .ts --ext .tsx --config .eslintrc"
 	},
 	"files": [
 		"dist/cli.js"
@@ -38,15 +39,26 @@
 	},
 	"devDependencies": {
 		"@ava/typescript": "^3.0.1",
+		"@imaginary-cloud/eslint-config-react": "2.0.1",
 		"@sindresorhus/tsconfig": "^3.0.1",
 		"@types/react": "^18.0.15",
+		"@typescript-eslint/eslint-plugin": "^5.31.0",
+		"@typescript-eslint/parser": "^5.31.0",
 		"ava": "^4.3.1",
 		"chalk": "^4.1.2",
 		"eslint": "^8.21.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-prettier": "^8.3.0",
 		"eslint-config-xo-react": "^0.27.0",
-		"eslint-plugin-react": "^7.30.1",
-		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-import-resolver-typescript": "^2.0.0",
+		"eslint-plugin-import": "^2.25.4",
+		"eslint-plugin-jest": "^26.0.0",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-react": "^7.28.0",
+		"eslint-plugin-react-hooks": "^4.3.0",
 		"ink-testing-library": "^2.1.0",
+		"prettier": "^2.7.1",
 		"typescript": "^4.7.4",
 		"xo": "^0.39.1"
 	}
