--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "tsc && chmod +x dist/cli.js",
-    "start": "yarn run build && dist/cli.js",
+    "start": "ts-node -r tsconfig-paths/register dist/cli.js",
     "pretest": "yarn run build",
     "test": "xo && ava",
     "lint": "eslint . --ext .ts --ext .tsx --config .eslintrc"
@@ -59,6 +59,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "ink-testing-library": "^2.1.0",
     "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.4",
     "xo": "^0.39.1"
   }
