--- a/.eslintrc
+++ b/.eslintrc
@@ -48,6 +48,7 @@
     ],
     "prettier/prettier": "off",
     "react/require-default-props": "off",
+    "react/function-component-definition": "off",
     "react/jsx-filename-extension": [
       1,
       {
