--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "dependencies": {
     "ink": "^3.2.0",
+    "lodash": "^4.17.21",
     "meow": "^9.0.0",
     "react": "^17.0.2"
   },
@@ -42,6 +43,7 @@
     "@ava/typescript": "^3.0.1",
     "@imaginary-cloud/eslint-config-react": "2.0.1",
     "@sindresorhus/tsconfig": "^3.0.1",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
